kind-cluster/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ingress
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
